Fix styling bug for sms verification digit inputs at small screen widths + Align signup process containers at the tops of screens to look better

--- a/client/src/styles/components/core/Instructions.css
+++ b/client/src/styles/components/core/Instructions.css
@@ -1,8 +1,8 @@
 .instructions-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - 100px);
+  flex-direction: column;
+  min-height: calc(100vh);
   padding: 2rem;
 }
 
